--- a/maze.ipynb
+++ b/maze.ipynb
@@ -743,7 +743,7 @@
             "Epoch: 018/14999 | Loss: 0.0023 | Episodes: 11 | Win count: 18 | Win rate: 0.933 | time: 9.64 minutes\n",
             "Epoch: 019/14999 | Loss: 0.0024 | Episodes: 2 | Win count: 19 | Win rate: 0.933 | time: 9.73 minutes\n",
             "Epoch: 020/14999 | Loss: 0.0019 | Episodes: 3 | Win count: 20 | Win rate: 0.933 | time: 9.87 minutes\n",
-            "Epoch: 021/14999 | Loss: 0.0009 | Episodes: 7 | Win count: 21 | Win rate: 1.000 | time: 10.19 minutes\n"
+            "Epoch: 021/14999 | Loss: 0.0009 | Episodes: 7 | Win count: 21 | Win rate: 1.000 | time: 10.19 minutes\n",
             "Reached 100% win rate at epoch: 54\n",
             "files: model.h5, model.json\n",
             "n_epoch: 21, max_mem: 200, data: 32, time: 10.19 minutes\n"
